[project]
name = "odoo-addons-oca-geospatial"
version = "17.0.20241017.1"
dependencies = [
    "odoo-addon-base_geoengine>=17.0dev,<17.1dev",
    "odoo-addon-base_geoengine_demo>=17.0dev,<17.1dev",
    "odoo-addon-geoengine_partner>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
